{{$NEXT}}
        . first implementation