@@ -14,3 +14,4 @@ META.yml
 MYMETA.yml
 nytprof.out
 pm_to_blib
+IO-Socket-Timeout*
