@@ -31,7 +31,8 @@ filenames = Makefile.PL
 
 ; -- dependencies
 [Prereqs]
-PerlIO::via::Timeout = 0
+PerlIO::via::Timeout = 0.16
+Socket = 0
 
 ; -- test dependencies
 [Prereqs / TestRequires]
