@@ -2,8 +2,7 @@ use strict;
 use warnings;
 
 BEGIN {
-    use Config;
-    if ( $Config{osname} eq 'MSWin32' ) {
+    if ( $^O eq 'MSWin32' ) {
         require Test::More;
         Test::More::plan( skip_all =>
               'should not test IO::Socket::Timeout::Strategy::Alarm under Win32' );
@@ -16,9 +15,12 @@ use lib "$Bin/tlib";
 use TestTimeout;
 use Test::Exception;
 
+use PerlIO::via::Timeout qw(timeout_strategy);
+use Errno qw(ETIMEDOUT);
+
 
 subtest 'test with no delays and no timeouts', sub {
-TestTimeout->test( provider => 'Alarm',
+TestTimeout->test( provider => 'AlarmWithReset',
                    connection_delay => 0,
                    read_delay => 0,
                    write_delay => 0,
@@ -37,7 +39,7 @@ TestTimeout->test( provider => 'Alarm',
 use POSIX qw(ETIMEDOUT ECONNRESET);
 
 subtest 'test with read timeout', sub {
-TestTimeout->test( provider => 'Alarm',
+TestTimeout->test( provider => 'AlarmWithReset',
                    connection_delay => 0,
                    read_timeout => 0.2,
                    read_delay => 3,
@@ -49,39 +51,11 @@ TestTimeout->test( provider => 'Alarm',
                        my $response = $client->getline;
                        is $response, "SOK\n", "got proper response 1";
                        $client->print("OK2\n");
+                       ok timeout_strategy($client)->is_valid, "socket is valid";
                        $response = $client->getline;
                        is $response, undef, "we've hit timeout";
-                       is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
-                   },
-                 );
-};
-
-subtest 'test with sysread timeout', sub {
-TestTimeout->test( provider => 'Alarm',
-                   connection_delay => 0,
-                   read_timeout => 0.2,
-                   read_delay => 3,
-                   write_timeout => 0,
-                   write_delay => 0,
-                   callback => sub {
-                       my ($client) = @_;
-                       $client->print("OK\n");
-                       my $buffer;
-                       my $length_read = $client->sysread($buffer, 4);
-                       is $length_read, 4, "got success";
-                       is $buffer, "SOK\n", "got proper response 1";
-                       $client->print("AA2\n");
-                       my $buffer2;
-                       $length_read = $client->sysread($buffer2, 5, $length_read);
-                       is $length_read, undef, "we've hit timeout";
-                       is $buffer2, undef, "buffer is undef";
-                       is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
+                       is 0+$!, ETIMEDOUT, "and error is timeout";
+                       ok ! timeout_strategy($client)->is_valid, "socket is not valid anymore";
                    },
                  );
 };
