@@ -7,28 +7,29 @@ use lib "$Bin/tlib";
 use TestTimeout;
 use Test::Exception;
 
+use PerlIO::via::Timeout qw(timeout_strategy);
 
-# subtest 'test with no delays and no timeouts', sub {
-# TestTimeout->test( provider => 'Select',
-#                    connection_delay => 0,
-#                    read_delay => 0,
-#                    write_delay => 0,
-#                    callback => sub {
-#                        my ($client) = @_;
-#                        $client->print("OK\n");
-#                        my $response = $client->getline;
-#                        is $response, "SOK\n", "got proper response 1";
-#                        $client->print("OK2\n");
-#                        $response = $client->getline;
-#                        is $response, "SOK2\n", "got proper response 2";
-#                    },
-#                  );
-# };
+use Errno qw(ETIMEDOUT);
 
-use POSIX qw(ETIMEDOUT ECONNRESET);
+subtest 'test with no delays and no timeouts', sub {
+TestTimeout->test( provider => 'SelectWithReset',
+                   connection_delay => 0,
+                   read_delay => 0,
+                   write_delay => 0,
+                   callback => sub {
+                       my ($client) = @_;
+                       $client->print("OK\n");
+                       my $response = $client->getline;
+                       is $response, "SOK\n", "got proper response 1";
+                       $client->print("OK2\n");
+                       $response = $client->getline;
+                       is $response, "SOK2\n", "got proper response 2";
+                   },
+                 );
+};
 
 subtest 'test with read timeout', sub {
-TestTimeout->test( provider => 'Select',
+TestTimeout->test( provider => 'SelectWithReset',
                    connection_delay => 0,
                    read_timeout => 0.2,
                    read_delay => 3,
@@ -40,39 +41,11 @@ TestTimeout->test( provider => 'Select',
                        my $response = $client->getline;
                        is $response, "SOK\n", "got proper response 1";
                        $client->print("OK2\n");
+                       ok timeout_strategy($client)->is_valid, "socket is valid";
                        $response = $client->getline;
                        is $response, undef, "we've hit timeout";
-                       is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
-                   },
-                 );
-};
-
-subtest 'test with sysread timeout', sub {
-TestTimeout->test( provider => 'Select',
-                   connection_delay => 0,
-                   read_timeout => 0.2,
-                   read_delay => 3,
-                   write_timeout => 0,
-                   write_delay => 0,
-                   callback => sub {
-                       my ($client) = @_;
-                       $client->print("OK\n");
-                       my $buffer;
-                       my $length_read = $client->sysread($buffer, 4);
-                       is $length_read, 4, "got success";
-                       is $buffer, "SOK\n", "got proper response 1";
-                       $client->print("AA2\n");
-                       my $buffer2;
-                       $length_read = $client->sysread($buffer2, 5, $length_read);
-                       is $length_read, undef, "we've hit timeout";
-                       is $buffer2, undef, "buffer is undef";
-                       is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
+                       is 0+$!, ETIMEDOUT, "and error is timeout";
+                       ok ! timeout_strategy($client)->is_valid, "socket is not valid anymore";
                    },
                  );
 };
