@@ -7,6 +7,9 @@ use lib "$Bin/tlib";
 use TestTimeout;
 use Test::Exception;
 
+use PerlIO::via::Timeout qw(timeout_strategy);
+
+use Errno qw(ETIMEDOUT ECONNRESET);
 
 subtest 'test with no delays and no timeouts', sub {
 TestTimeout->test( provider => 'SetSockOpt',
@@ -25,8 +28,6 @@ TestTimeout->test( provider => 'SetSockOpt',
                  );
 };
 
-use POSIX qw(ETIMEDOUT ECONNRESET);
-
 subtest 'test with read timeout', sub {
 TestTimeout->test( provider => 'SetSockOpt',
                    connection_delay => 0,
@@ -43,36 +44,7 @@ TestTimeout->test( provider => 'SetSockOpt',
                        $response = $client->getline;
                        is $response, undef, "we've hit timeout";
                        is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
-                   },
-                 );
-};
-
-subtest 'test with sysread timeout', sub {
-TestTimeout->test( provider => 'SetSockOpt',
-                   connection_delay => 0,
-                   read_timeout => 0.2,
-                   read_delay => 3,
-                   write_timeout => 0,
-                   write_delay => 0,
-                   callback => sub {
-                       my ($client) = @_;
-                       $client->print("OK\n");
-                       my $buffer;
-                       my $length_read = $client->sysread($buffer, 4);
-                       is $length_read, 4, "got success";
-                       is $buffer, "SOK\n", "got proper response 1";
-                       $client->print("AA2\n");
-                       my $buffer2;
-                       $length_read = $client->sysread($buffer2, 5, $length_read);
-                       is $length_read, undef, "we've hit timeout";
-                       is length($buffer2), 0, "buffer is undef";
-                       is $!, 'Operation timed out', "and error is timeout";
-                       is ${*$client}{__is_valid__}, 0, "socket is not valid anymore";
-                       ok $client->error, "socket is in error";
-                       ok !$client->opened, "socket is not opened";
+                       ok ! timeout_strategy($client)->is_valid, "socket is not valid anymore";
                    },
                  );
 };
